# procmap

./: .eslintignore  .eslintrc.js  .gitignore  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  quasar.conf.js  quasar.extensions.json  tsconfig.json
src/: App.vue  EventBus.ts  ReteVueRenderPlugin.d.ts  events.ts  vue-grid-item.d.ts  vue-resize-directive.d.ts  vuedraggable.d.ts
src-electron/main-process/: electron-main.js
src-server/: Cargo.toml  schema.sql  test_form.json  test_view.json
src-server/migrations/2021-04-03-141550_create_tables/: down.sql  up.sql
src-server/src/: db.rs  form.rs  layout.rs  layout_api.rs  main.rs  page.rs  page_api.rs  page_connection.rs  schema.rs  temp_flow.rs  temp_flow_api.rs  user.rs  user_api.rs  view.rs
src/__tests__/: App.test.ts
src/boot/: mitt.ts
src/components/: ChartWidget.vue  Copy.ts  DesktopWindowTitleBar.vue  DimensionControl.vue  DynamicPage.vue  EmitterComponent.ts  FlowControl.ts  FlowEditorComponent.vue  FlowEditorDock.vue  FlowGraph.ts  FlowGraph.vue  FlowGraphComponent.vue  FlowGraphEditor.vue  FlowGraphNodeList.vue  FlowGraphNodesList.vue  FlowGraphWidget.vue  FormWidget.vue  FunctionControl.vue  IdeWidget.vue  ImageControl.vue  ImageRenderer.vue  ImageWidget.vue  InputPin.vue  ListWidget.vue  MapEditorComponent.vue  MapNodesList.vue  MapWidget.vue  MessageLog.vue  NestedDraggable.vue  Node.vue  NumberControl.vue  OutputPin.vue  PointControl.vue  PointsControl.vue  Preview2D.vue  SVGRenderer.vue  Socket.vue  StyleSelector.vue  TableView.vue  TableWidget.vue  (+7 more)
src/helpers/: svg.ts
(+215 files in other folders)
