[package]
name = "rust-server"
version = "0.1.0"
authors = ["Gil Engel <gil.engel@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
rocket = { version = "0.4.7" }
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0.64"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "numeric" ]}
log = "0.4.14"
#diesel_migrations = "1.4.0"
